<?xml version="1.0"?>
<package format="2">
  <name>amr31001</name>
  <version>0.0.0</version>
  <description>The amr31001 package</description>

  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>CC BY-NC</license>
  <url type="website">http://github.com/tom-howard/amr31001</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
